[gd_scene load_steps=7 format=3 uid="uid://2rbs1h5pdxwy"]

[ext_resource type="Texture2D" uid="uid://drs6h1gj2vpn5" path="res://graphics/ui/bullet.png" id="1_b2pox"]
[ext_resource type="Theme" uid="uid://c1egfa6eq0o2c" path="res://scenes/user interface/main_theme.tres" id="1_s8vjj"]
[ext_resource type="Script" uid="uid://c25ry5jqbgold" path="res://scenes/user interface/ui.gd" id="1_x14l5"]
[ext_resource type="Texture2D" uid="uid://dv0vrrdsgbfxm" path="res://graphics/ui/grenade.png" id="2_5nlf0"]
[ext_resource type="Texture2D" uid="uid://d03x63g4agj4e" path="res://graphics/ui/progress_bar/bg.png" id="4_4kkmn"]
[ext_resource type="Texture2D" uid="uid://bpslsybhl6n36" path="res://graphics/ui/progress_bar/progress.png" id="5_x14l5"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_x14l5")

[node name="LaserCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.88
anchor_top = 0.92
anchor_right = 0.9
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LaserCounter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LaserLabel" type="Label" parent="LaserCounter/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_s8vjj")
text = "20"
horizontal_alignment = 1

[node name="LaserTextureRect" type="TextureRect" parent="LaserCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_b2pox")
expand_mode = 4

[node name="GrenadeCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.94
anchor_top = 0.92
anchor_right = 0.94
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GrenadeCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GrenadeLabel" type="Label" parent="GrenadeCounter/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_s8vjj")
text = "10"
horizontal_alignment = 1

[node name="GrenadeTextureRect" type="TextureRect" parent="GrenadeCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_5nlf0")
expand_mode = 4

[node name="HealthMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 27

[node name="HealthTextureProgressBar" type="TextureProgressBar" parent="HealthMarginContainer"]
layout_mode = 2
value = 80.0
texture_under = ExtResource("4_4kkmn")
texture_progress = ExtResource("5_x14l5")
